--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,2 +1,11 @@
-/* mixins, variables, etc. */
+$gray-darker:#222;
 $gray-medium-light: #eaeaea;
+$gray:#555;
+$light-gray: #777;
+$red:red;
+$white: #fff;
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
