--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<%= provide :title, t(".title") %>
+<% provide :title, t(".title") %>
 <div class="center jumbotron">
   <h1><%= t ".header"%></h1>
 
