--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,24 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("layout._header.home"), home_path %></li>
         <li><%= link_to t("layout._header.help"), hefl_path %></li>
-        <li><%= link_to t("layout._header.logIn"), "#" %></li>
+        <% if logged_in? %>
+          <li><%= link_to t(".users"), "#" %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <%= t ".account"%> <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to t(".Profile"), current_user %></li>
+              <li><%= link_to t(".Settings"), "#" %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to t(".Log out"), logout_path, method: :delete %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to t(".Log in"), login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
