Chapter_9: Advanced login

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -170,3 +170,15 @@ input {
     color: $state-danger-text;
   }
 }
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+#user_remember {
+  width: auto;
+  margin-left: 0;
+}
