--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -4,5 +4,10 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render "form" %>
+
+    <div class="gravatar_edit">
+      <%= gravatar_for @user %>
+      <a href="http://gravatar.com/emails" target="_blank" rel="nofollow"><%= t ".btnChange"%></a>
+    </div>
   </div>
 </div>
