--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <aside class="col-md-4">
     <section class="user_info">
       <h1>
-        <%= gravatar_for @user, {size: Settings.user_helper.size_gravatar} %>
+        <%= gravatar_for @user, {size: Settings.user.size_gravatar} %>
         <%= @user.name %>
       </h1>
     </section>
