--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,10 @@
-<h1>User#password_reset</h1>
+<h1><%= t ".title" %></h1>
 
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
-</p>
+<p><%= t ".content1" %></p>
+
+<%= link_to t(".reset"), edit_password_reset_url(@user.reset_token,
+  email: @user.email, locale: "en") %>
+
+<p><%= t ".content2" %></p>
+
+<p><%= t ".content3" %></p>
