--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,3 +1,6 @@
-User#password_reset
+<%= t ".content1" %>
+<%= edit_password_reset_url(@user.reset_token, email: @user.email, locale: "en") %>
 
-<%= @greeting %>, find me in app/views/user_mailer/password_reset.text.erb
+<%= t ".content2" %>
+
+<%= t ".content3" %>
